hotel, hospital lekérdezés, animal\owner delete

--- a/shelter-project/src/app/header/header.component.html
+++ b/shelter-project/src/app/header/header.component.html
@@ -20,7 +20,7 @@
           <a [routerLink]="['/animal']">Állatok</a>
           <a [routerLink]="['/owner']">Tulajdonosok</a>
           <a [routerLink]="['/hospital']">Osztályok</a>
-          <a  (click)="logout()">Kijelentkezés</a>
+          <a style="cursor:pointer" (click)="logout()">Kijelentkezés</a>
         </nav>
       </div>
     </div>
