--- a/shelter-project/src/app/hospital/hospital.component.html
+++ b/shelter-project/src/app/hospital/hospital.component.html
@@ -14,7 +14,7 @@
                 
                 <tr *ngFor="let hospital of hospitals">
                     <td>{{hospital.name}}</td>
-                    <td>{{hospital.phoneNumber}}</td>
+                    <td>{{hospital.phone_number}}</td>
                     <td>{{hospital.email}}</td>
                     <td>{{hospital.address}}</td>
                   </tr>
