--- a/shelter-project/src/app/hotel/hotel.component.html
+++ b/shelter-project/src/app/hotel/hotel.component.html
@@ -10,7 +10,7 @@
                 <td>
               <tr>
                 <td> <img src="assets/img/phone.png"> </td>
-                <td>{{hot.phoneNumber}}</td>
+                <td>{{hot.phone_number}}</td>
 
               </tr>
               <br>
