Új animal hozzáadása

--- a/shelter-project/src/app/animal-put/animal-put.component.html
+++ b/shelter-project/src/app/animal-put/animal-put.component.html
@@ -46,9 +46,9 @@
                   <label for="fname">Jól kijön a kutyákkal? </label>
                 
               <form action="">
-                <input [(ngModel)]="getOnWellWithDOGS" type="radio" class="form-radio" name="dogs" value="false" checked> Nem<br>
+                <input [(ngModel)]="getOnWellWithDOGS" type="radio" class="form-radio" name="dogs" value="false" > Nem<br>
                 <input [(ngModel)]="getOnWellWithDOGS" type="radio" class="form-radio" name="dogs" value="true" > Igen<br>
-                <!-- {{getOnWellWithDOGS}} -->
+                {{getOnWellWithDOGS}}
               </form>  
             </div>
     
@@ -59,7 +59,7 @@
                 <label for="fname"> Jól kijön a cicákkal? </label>
                 
               <form action="">
-                <input [(ngModel)]="getOnWellWithCATS" type="radio" class="form-radio" name="cats" value="false" checked> Nem<br>
+                <input [(ngModel)]="getOnWellWithCATS" type="radio" class="form-radio" name="cats" value="false" > Nem<br>
                 <input [(ngModel)]="getOnWellWithCATS" type="radio" class="form-radio" name="cats" value="true" > Igen<br>
                 <!-- {{getOnWellWithCATS}} -->
               </form> 
@@ -69,7 +69,7 @@
                 <label for="fname">  Jól kijön a gyerekekkel? </label>
                 
               <form action="">
-                <input [(ngModel)]="getOnWellWithKIDS" type="radio" class="form-radio" name="kids" value="false" checked> Nem<br>
+                <input [(ngModel)]="getOnWellWithKIDS" type="radio" class="form-radio" name="kids" value="false" > Nem<br>
                 <input [(ngModel)]="getOnWellWithKIDS" type="radio" class="form-radio" name="kids" value="true" > Igen<br>
                 <!-- {{getOnWellWithKIDS}} -->
                 <br>
