--- a/shelter-project/src/app/owner-by-id/owner-by-id.component.html
+++ b/shelter-project/src/app/owner-by-id/owner-by-id.component.html
@@ -16,7 +16,7 @@
                     
                     <tr class="table-text">
                         <td>Telefonszám: </td>
-                        <td>{{owner?.phoneNumber}}</td>
+                        <td>{{owner?.phone_number}}</td>
                     </tr>
                     <tr class="table-text">
                         <td>Email címe: </td>
